fixed spacing on mobile version

--- a/styles/footer.css
+++ b/styles/footer.css
@@ -105,6 +105,7 @@ footer {
     flex-direction: column;
     gap: 4rem;
     align-items: start;
+    padding-top: 2rem;
 
     & nav {
       flex-direction: column;
